--- a/frontend/src/applications/card/card.css
+++ b/frontend/src/applications/card/card.css
@@ -4,16 +4,18 @@
   width: 30%;
   border-radius: 10px;
   margin: 50px auto auto;
+  padding: 14px
 }
 
 .phrase {
-  padding: 10px;
-  display: flex;
   flex-direction: row;
 }
 
 .word {
-  padding: 4px;
+  display: inline-block;
+  font-size: 24px;
+  color: sienna;
+  padding: 4px 8px 4px 0;
 }
 
 .card:hover {
