--- a/frontend/src/applications/card/card.css
+++ b/frontend/src/applications/card/card.css
@@ -22,6 +22,8 @@
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.explanation {
-
+.description {
+  border-top: 1px solid grey;
+  padding-top: 10px;
+  margin-top: 10px;
 }
