done with input colors

--- a/frontend/src/applications/study_cards/input/input.css
+++ b/frontend/src/applications/study_cards/input/input.css
@@ -7,7 +7,7 @@
     outline: 0;
     padding-left: 10px;
     padding-right: 5px;
-    color: lightslategray;
+    color: #22596e;
 }
 
 input:focus {
