--- a/frontend/src/applications/study_cards/card/card.css
+++ b/frontend/src/applications/study_cards/card/card.css
@@ -14,7 +14,7 @@
 .word {
   display: inline-block;
   font-size: 24px;
-  color: lightslategray;
+  color: #22596e;
   padding: 4px 8px 4px 0;
 }
 
