--- a/frontend/src/applications/study_cards/card/card.css
+++ b/frontend/src/applications/study_cards/card/card.css
@@ -4,11 +4,19 @@
   width: 30%;
   border-radius: 10px;
   margin: 50px auto auto;
-  padding: 14px
+  padding: 14px 14px 14px 14px
 }
 
 .phrase {
   flex-direction: row;
+}
+
+.progressPanel {
+  width: 20px;
+  position: relative;
+  display: block;
+  top: 0;
+  left: -30px;
 }
 
 .word {
