--- a/frontend/src/applications/study_cards/card/card.css
+++ b/frontend/src/applications/study_cards/card/card.css
@@ -36,18 +36,14 @@
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.description {
-    border-top: 1px solid grey;
-    padding-top: 10px;
-    margin-top: 15px;
-}
-
 .typePanel {
-    padding-top: 10px;
+    padding-top: 15px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
+    border-bottom: 1px solid grey;
+    min-height: 35px;
 }
 
 .answerType {
@@ -56,7 +52,16 @@
 }
 
 .typeSwitcher {
+    padding-top: 5px;
     margin-right: 0;
+}
+
+.cardFooter {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
 
 .ansTranslation {
